--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <head>
       <link href="http://allfont.ru/allfont.css?fonts=dollhousec" rel="stylesheet" type="text/css" />
 </head>
+
+
+<div class="master">111</div>
